samples/_failures_safe/1761183438_75bf05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4f4ab89.c: In function ‘main’:
./samples/SAFE/__tmp_d4f4ab89.c:145:12: error: missing terminating " character
  145 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_d4f4ab89.c:145:5: error: expected expression at end of input
  145 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_d4f4ab89.c:145:5: error: expected declaration or statement at end of input
